--- a/index.ipynb
+++ b/index.ipynb
@@ -591,7 +591,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "num_of_repeats = \n",
+    "num_of_repeats = unique_countries\n",
     "num_of_repeats # 3"
    ]
   },
